Add entity usage and paragraphs library

--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -38,6 +38,7 @@ module:
   entity_browser_entity_form: 0
   entity_embed: 0
   entity_reference_revisions: 0
+  entity_usage: 0
   field: 0
   field_group: 0
   field_ui: 0
@@ -71,6 +72,7 @@ module:
   oc_custom: 0
   options: 0
   page_cache: 0
+  paragraphs_library: 0
   paragraphs_type_permissions: 0
   path: 0
   pathologic: 0
