--- a/config/sync/user.role.senior_editor.yml
+++ b/config/sync/user.role.senior_editor.yml
@@ -65,9 +65,9 @@ permissions:
   - 'create paragraph content basic_page_section'
   - 'create paragraph content block_placer'
   - 'create paragraph content buttons'
-  - 'create paragraph content call_to_action'
   - 'create paragraph content event_by_category'
   - 'create paragraph content form'
+  - 'create paragraph content from_library'
   - 'create paragraph content horizontal_rule'
   - 'create paragraph content image'
   - 'create paragraph content landing_page_section'
@@ -85,6 +85,7 @@ permissions:
   - 'create paragraph content text'
   - 'create paragraph content tile_image'
   - 'create paragraph content video'
+  - 'create paragraph library item'
   - 'create profiles content'
   - 'create url aliases'
   - 'create video media'
@@ -124,9 +125,9 @@ permissions:
   - 'delete paragraph content basic_page_section'
   - 'delete paragraph content block_placer'
   - 'delete paragraph content buttons'
-  - 'delete paragraph content call_to_action'
   - 'delete paragraph content event_by_category'
   - 'delete paragraph content form'
+  - 'delete paragraph content from_library'
   - 'delete paragraph content horizontal_rule'
   - 'delete paragraph content image'
   - 'delete paragraph content landing_page_section'
@@ -171,6 +172,7 @@ permissions:
   - 'edit own video media'
   - 'edit own webform'
   - 'edit own webform submission'
+  - 'edit paragraph library item'
   - 'edit terms in categories'
   - 'edit terms in position'
   - 'edit terms in tags'
@@ -191,9 +193,9 @@ permissions:
   - 'update paragraph content basic_page_section'
   - 'update paragraph content block_placer'
   - 'update paragraph content buttons'
-  - 'update paragraph content call_to_action'
   - 'update paragraph content event_by_category'
   - 'update paragraph content form'
+  - 'update paragraph content from_library'
   - 'update paragraph content horizontal_rule'
   - 'update paragraph content image'
   - 'update paragraph content landing_page_section'
@@ -228,6 +230,7 @@ permissions:
   - 'view own webform submission'
   - 'view page revisions'
   - 'view pane admin links'
+  - 'view paragraph content from_library'
   - 'view paragraph content pullquote'
   - 'view profiles revisions'
   - 'view the administration theme'
