--- a/config/sync/core.entity_view_display.paragraph.call_to_action.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.call_to_action.default.yml
@@ -3,16 +3,9 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.field.paragraph.call_to_action.field_admin_description
-    - field.field.paragraph.call_to_action.field_oc_link
-    - field.field.paragraph.call_to_action.field_oc_long_text
-    - field.field.paragraph.call_to_action.field_widget_title
     - paragraphs.paragraphs_type.call_to_action
   module:
     - layout_builder
-    - layout_discovery
-    - link
-    - text
 third_party_settings:
   layout_builder:
     sections: {  }
@@ -24,33 +17,5 @@ id: paragraph.call_to_action.default
 targetEntityType: paragraph
 bundle: call_to_action
 mode: default
-content:
-  field_oc_link:
-    weight: 3
-    label: hidden
-    settings:
-      trim_length: 80
-      url_only: false
-      url_plain: false
-      rel: ''
-      target: ''
-    third_party_settings: {  }
-    type: link
-    region: content
-  field_oc_long_text:
-    weight: 2
-    label: hidden
-    settings: {  }
-    third_party_settings: {  }
-    type: text_default
-    region: content
-  field_widget_title:
-    weight: 0
-    label: hidden
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-    type: string
-    region: content
-hidden:
-  field_admin_description: true
+content: {  }
+hidden: {  }
