--- a/config/sync/core.entity_view_display.paragraph.call_to_action.preview.yml
+++ b/config/sync/core.entity_view_display.paragraph.call_to_action.preview.yml
@@ -4,14 +4,9 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.paragraph.preview
-    - field.field.paragraph.call_to_action.field_admin_description
-    - field.field.paragraph.call_to_action.field_oc_link
-    - field.field.paragraph.call_to_action.field_oc_long_text
-    - field.field.paragraph.call_to_action.field_widget_title
     - paragraphs.paragraphs_type.call_to_action
   module:
     - layout_builder
-    - layout_discovery
 third_party_settings:
   layout_builder:
     sections: {  }
@@ -23,16 +18,5 @@ id: paragraph.call_to_action.preview
 targetEntityType: paragraph
 bundle: call_to_action
 mode: preview
-content:
-  field_admin_description:
-    type: string
-    weight: 0
-    region: content
-    label: hidden
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-hidden:
-  field_oc_link: true
-  field_oc_long_text: true
-  field_widget_title: true
+content: {  }
+hidden: {  }
