--- a/config/sync/paragraphs.paragraphs_type.accordion_group.yml
+++ b/config/sync/paragraphs.paragraphs_type.accordion_group.yml
@@ -4,6 +4,11 @@ status: true
 dependencies:
   content:
     - 'file:file:3463b5d3-a527-4ac0-b1a9-84a495d614b6'
+  module:
+    - paragraphs_library
+third_party_settings:
+  paragraphs_library:
+    allow_library_conversion: true
 _core:
   default_config_hash: FhFNxBKqbZtQXblHXf44SrI1cbH_Q8OEvDbJJVLcd0M
 id: accordion_group
