--- a/config/sync/paragraphs.paragraphs_type.image.yml
+++ b/config/sync/paragraphs.paragraphs_type.image.yml
@@ -4,6 +4,11 @@ status: true
 dependencies:
   content:
     - 'file:file:b321b73b-f167-4128-89ec-b805586085c2'
+  module:
+    - paragraphs_library
+third_party_settings:
+  paragraphs_library:
+    allow_library_conversion: true
 _core:
   default_config_hash: MQuBGUXWIA7YFtgbStyyzu7e_EvJv3xkCEIWHvKBKSQ
 id: image
