--- a/config/sync/paragraphs.paragraphs_type.map.yml
+++ b/config/sync/paragraphs.paragraphs_type.map.yml
@@ -4,6 +4,11 @@ status: true
 dependencies:
   content:
     - 'file:file:18ea36d4-3fd3-4894-9149-6017c3150757'
+  module:
+    - paragraphs_library
+third_party_settings:
+  paragraphs_library:
+    allow_library_conversion: true
 _core:
   default_config_hash: JOgEVUcpdgazZoePTtXWigCQ_TJd-k6dF-SPKXOYJlo
 id: map
