--- a/config/sync/paragraphs.paragraphs_type.slideshow.yml
+++ b/config/sync/paragraphs.paragraphs_type.slideshow.yml
@@ -4,6 +4,11 @@ status: true
 dependencies:
   content:
     - 'file:file:3e91c741-de7a-4720-8028-09dd9fc2b6f1'
+  module:
+    - paragraphs_library
+third_party_settings:
+  paragraphs_library:
+    allow_library_conversion: true
 _core:
   default_config_hash: W-YSWm69MO4j53tndCm8_qZECmzSJsCBva_O_OgzfZo
 id: slideshow
