--- a/config/sync/user.role.editor.yml
+++ b/config/sync/user.role.editor.yml
@@ -39,9 +39,9 @@ permissions:
   - 'create paragraph content basic_page_section'
   - 'create paragraph content block_placer'
   - 'create paragraph content buttons'
-  - 'create paragraph content call_to_action'
   - 'create paragraph content event_by_category'
   - 'create paragraph content form'
+  - 'create paragraph content from_library'
   - 'create paragraph content horizontal_rule'
   - 'create paragraph content image'
   - 'create paragraph content landing_page_section'
@@ -80,9 +80,9 @@ permissions:
   - 'delete paragraph content basic_page_section'
   - 'delete paragraph content block_placer'
   - 'delete paragraph content buttons'
-  - 'delete paragraph content call_to_action'
   - 'delete paragraph content event_by_category'
   - 'delete paragraph content form'
+  - 'delete paragraph content from_library'
   - 'delete paragraph content horizontal_rule'
   - 'delete paragraph content image'
   - 'delete paragraph content landing_page_section'
@@ -118,6 +118,7 @@ permissions:
   - 'edit own profiles content'
   - 'edit own video media'
   - 'edit own webform submission'
+  - 'edit paragraph library item'
   - 'edit terms in categories'
   - 'edit terms in position'
   - 'edit terms in tags'
@@ -136,9 +137,9 @@ permissions:
   - 'update paragraph content basic_page_section'
   - 'update paragraph content block_placer'
   - 'update paragraph content buttons'
-  - 'update paragraph content call_to_action'
   - 'update paragraph content event_by_category'
   - 'update paragraph content form'
+  - 'update paragraph content from_library'
   - 'update paragraph content horizontal_rule'
   - 'update paragraph content image'
   - 'update paragraph content landing_page_section'
@@ -172,6 +173,7 @@ permissions:
   - 'view own webform submission'
   - 'view page revisions'
   - 'view pane admin links'
+  - 'view paragraph content from_library'
   - 'view paragraph content pullquote'
   - 'view profiles revisions'
   - 'view the administration theme'
