--- a/config/sync/paragraphs.paragraphs_type.landing_page_section.yml
+++ b/config/sync/paragraphs.paragraphs_type.landing_page_section.yml
@@ -5,5 +5,5 @@ dependencies: {  }
 id: landing_page_section
 label: 'Landing Page Section'
 icon_uuid: null
-description: 'Section widgets holder for landing pages.'
+description: 'Section widgets holder for landing pages'
 behavior_plugins: {  }
