--- a/config/sync/paragraphs.paragraphs_type.lightbox_gallery.yml
+++ b/config/sync/paragraphs.paragraphs_type.lightbox_gallery.yml
@@ -14,5 +14,5 @@ _core:
 id: lightbox_gallery
 label: 'Lightbox Gallery'
 icon_uuid: 161fea28-9d32-4849-895c-63276bcb69a0
-description: ''
+description: 'Uses Featherlight.js to create a gallery of images with lightbox functionality'
 behavior_plugins: {  }
