--- a/config/sync/paragraphs.paragraphs_type.links_files.yml
+++ b/config/sync/paragraphs.paragraphs_type.links_files.yml
@@ -14,5 +14,5 @@ _core:
 id: links_files
 label: 'Links & Files'
 icon_uuid: cb77aac9-796c-466e-9b29-828a8bf79ee7
-description: ''
+description: 'Creates a single list of links and/or file document media references'
 behavior_plugins: {  }
