--- a/config/sync/paragraphs.paragraphs_type.accordion_group.yml
+++ b/config/sync/paragraphs.paragraphs_type.accordion_group.yml
@@ -14,5 +14,5 @@ _core:
 id: accordion_group
 label: 'Accordion Group'
 icon_uuid: 3463b5d3-a527-4ac0-b1a9-84a495d614b6
-description: ''
+description: 'Creates structure for accordion items'
 behavior_plugins: {  }
