--- a/config/sync/paragraphs.paragraphs_type.accordion_item.yml
+++ b/config/sync/paragraphs.paragraphs_type.accordion_item.yml
@@ -9,5 +9,5 @@ _core:
 id: accordion_item
 label: 'Accordion Item'
 icon_uuid: 3fcf2449-30a2-4b46-b972-f9ddde522828
-description: 'Accordion Group subwidget'
+description: 'Adds long text accordion content inside accordion groups'
 behavior_plugins: {  }
