--- a/config/sync/paragraphs.paragraphs_type.admin_view_placer.yml
+++ b/config/sync/paragraphs.paragraphs_type.admin_view_placer.yml
@@ -9,5 +9,5 @@ _core:
 id: admin_view_placer
 label: 'View Placer'
 icon_uuid: c61cd64f-3849-4ec5-9603-a85e9e8566e6
-description: ''
+description: 'Places a view'
 behavior_plugins: {  }
