--- a/config/sync/paragraphs.paragraphs_type.event_by_category.yml
+++ b/config/sync/paragraphs.paragraphs_type.event_by_category.yml
@@ -9,5 +9,5 @@ _core:
 id: event_by_category
 label: 'Events by Category'
 icon_uuid: 71f689e1-cc2a-423e-a979-428c849eceae
-description: ''
+description: 'Shows a view of events by category taxonomy'
 behavior_plugins: {  }
