--- a/config/sync/paragraphs.paragraphs_type.form.yml
+++ b/config/sync/paragraphs.paragraphs_type.form.yml
@@ -9,5 +9,5 @@ _core:
 id: form
 label: Form
 icon_uuid: 777528c5-2885-4d0c-a13a-66c124b2d8a8
-description: ''
+description: 'References webform forms'
 behavior_plugins: {  }
