--- a/config/sync/paragraphs.paragraphs_type.image.yml
+++ b/config/sync/paragraphs.paragraphs_type.image.yml
@@ -14,5 +14,5 @@ _core:
 id: image
 label: Image
 icon_uuid: b321b73b-f167-4128-89ec-b805586085c2
-description: ''
+description: 'Creates a linkable image in various sizes'
 behavior_plugins: {  }
