Paragraph library admin theming

--- a/config/sync/views.view.paragraphs_library.yml
+++ b/config/sync/views.view.paragraphs_library.yml
@@ -3,6 +3,7 @@ langcode: en
 status: true
 dependencies:
   module:
+    - entity_reference_revisions
     - entity_usage
     - paragraphs
     - paragraphs_library
@@ -50,15 +51,17 @@ display:
           sort_asc_label: Asc
           sort_desc_label: Desc
       pager:
-        type: mini
+        type: full
         options:
-          items_per_page: 50
+          items_per_page: 20
           offset: 0
           id: 0
           total_pages: null
           tags:
             previous: ‹‹
             next: ››
+            first: '« First'
+            last: 'Last »'
           expose:
             items_per_page: false
             items_per_page_label: 'Items per page'
@@ -67,6 +70,7 @@ display:
             items_per_page_options_all_label: '- All -'
             offset: false
             offset_label: Offset
+          quantity: 5
       style:
         type: table
         options:
@@ -260,7 +264,7 @@ display:
           relationship: none
           group_type: group
           admin_label: ''
-          label: Paragraphs
+          label: 'Admin Description'
           exclude: false
           alter:
             alter_text: false
@@ -302,8 +306,9 @@ display:
           empty_zero: false
           hide_alter_empty: true
           click_sort_column: target_id
-          type: paragraph_summary
-          settings: {  }
+          type: entity_reference_revisions_entity_view
+          settings:
+            view_mode: preview
           group_column: entity_id
           group_columns:
             target_id: target_id
@@ -318,72 +323,6 @@ display:
           field_api_classes: false
           entity_type: paragraphs_library_item
           entity_field: paragraphs
-          plugin_id: field
-        langcode:
-          id: langcode
-          table: paragraphs_library_item_field_data
-          field: langcode
-          relationship: none
-          group_type: group
-          admin_label: ''
-          label: Language
-          exclude: false
-          alter:
-            alter_text: false
-            text: ''
-            make_link: false
-            path: ''
-            absolute: false
-            external: false
-            replace_spaces: false
-            path_case: none
-            trim_whitespace: false
-            alt: ''
-            rel: ''
-            link_class: ''
-            prefix: ''
-            suffix: ''
-            target: ''
-            nl2br: false
-            max_length: 0
-            word_boundary: true
-            ellipsis: true
-            more_link: false
-            more_link_text: ''
-            more_link_path: ''
-            strip_tags: false
-            trim: false
-            preserve_tags: ''
-            html: false
-          element_type: ''
-          element_class: ''
-          element_label_type: ''
-          element_label_class: ''
-          element_label_colon: true
-          element_wrapper_type: ''
-          element_wrapper_class: ''
-          element_default_classes: true
-          empty: ''
-          hide_empty: false
-          empty_zero: false
-          hide_alter_empty: true
-          click_sort_column: value
-          type: language
-          settings:
-            link_to_entity: false
-            native_language: false
-          group_column: value
-          group_columns: {  }
-          group_rows: true
-          delta_limit: 0
-          delta_offset: 0
-          delta_reversed: false
-          delta_first_last: false
-          multi_type: separator
-          separator: ', '
-          field_api_classes: false
-          entity_type: paragraphs_library_item
-          entity_field: langcode
           plugin_id: field
         id:
           id: id
@@ -787,8 +726,23 @@ display:
           entity_type: paragraph
           entity_field: default_langcode
           plugin_id: boolean
-      sorts: {  }
-      title: 'Paragraphs library'
+      sorts:
+        created:
+          id: created
+          table: paragraphs_item_field_data
+          field: created
+          relationship: paragraphs__target_id
+          group_type: group
+          admin_label: ''
+          order: DESC
+          exposed: false
+          expose:
+            label: ''
+          granularity: second
+          entity_type: paragraph
+          entity_field: created
+          plugin_id: date
+      title: 'Widget library'
       header: {  }
       footer: {  }
       empty:
@@ -841,14 +795,15 @@ display:
         - url.query_args
         - user.permissions
       tags: {  }
-  page_1:
+  widget_library:
     display_plugin: page
-    id: page_1
-    display_title: Page
+    id: widget_library
+    display_title: 'Widget Library'
     position: 1
     display_options:
       display_extenders: {  }
       path: admin/content/paragraphs
+      display_description: ''
     cache_metadata:
       max-age: -1
       contexts:
