--- a/config/sync/core.entity_form_display.paragraph.from_library.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.from_library.default.yml
@@ -19,14 +19,13 @@ content:
     type: entity_browser_entity_reference
     settings:
       entity_browser: paragraphs_library_items
-      open: true
-      field_widget_display: rendered_entity
-      field_widget_display_settings:
-        view_mode: summary
-      field_widget_remove: false
-      field_widget_replace: true
+      field_widget_display: label
       field_widget_edit: true
+      field_widget_remove: true
+      open: true
       selection_mode: selection_append
+      field_widget_replace: false
+      field_widget_display_settings: {  }
     weight: 1
     third_party_settings: {  }
     region: content
