--- a/config/sync/views.view.media.yml
+++ b/config/sync/views.view.media.yml
@@ -499,7 +499,7 @@ display:
           exposed: true
           expose:
             operator_id: bundle_op
-            label: Provider
+            label: 'Media Type'
             description: ''
             use_operator: false
             operator: bundle_op
@@ -511,6 +511,8 @@ display:
               authenticated: authenticated
               anonymous: '0'
               administrator: '0'
+              senior_editor: '0'
+              editor: '0'
             reduce: false
           is_grouped: false
           group_info:
