--- a/config/sync/views.view.paragraphs_library_browser.yml
+++ b/config/sync/views.view.paragraphs_library_browser.yml
@@ -4,8 +4,10 @@ status: true
 dependencies:
   module:
     - entity_browser
+    - entity_reference_revisions
     - paragraphs
     - paragraphs_library
+    - views_infinite_scroll
 _core:
   default_config_hash: PZWQQUZ900oUouSDZFDokKyDnpjh2REA1CCBU_tllsY
 id: paragraphs_library_browser
@@ -48,12 +50,15 @@ display:
           sort_asc_label: Asc
           sort_desc_label: Desc
       pager:
-        type: mini
+        type: infinite_scroll
         options:
           items_per_page: 10
           offset: 0
           id: 0
           total_pages: null
+          tags:
+            previous: ‹‹
+            next: ››
           expose:
             items_per_page: false
             items_per_page_label: 'Items per page'
@@ -62,9 +67,9 @@ display:
             items_per_page_options_all_label: '- All -'
             offset: false
             offset_label: Offset
-          tags:
-            previous: ‹‹
-            next: ››
+          views_infinite_scroll:
+            button_text: 'Load More'
+            automatically_load_content: true
       style:
         type: table
         options:
@@ -350,8 +355,9 @@ display:
           empty_zero: false
           hide_alter_empty: true
           click_sort_column: target_id
-          type: paragraph_summary
-          settings: {  }
+          type: entity_reference_revisions_entity_view
+          settings:
+            view_mode: preview
           group_column: entity_id
           group_columns:
             target_id: target_id
@@ -596,7 +602,7 @@ display:
           entity_field: default_langcode
           plugin_id: boolean
       sorts: {  }
-      title: 'Paragraphs library'
+      title: 'Widget library'
       header: {  }
       footer: {  }
       empty:
@@ -642,11 +648,12 @@ display:
   entity_browser:
     display_plugin: entity_browser
     id: entity_browser
-    display_title: 'Entity browser'
+    display_title: 'Widget browser'
     position: 2
     display_options:
       display_extenders: {  }
       rendering_language: '***LANGUAGE_language_interface***'
+      display_description: ''
     cache_metadata:
       max-age: -1
       contexts:
