--- a/config/sync/structure_sync.data.yml
+++ b/config/sync/structure_sync.data.yml
@@ -23,3 +23,16 @@ menus:
     weight: '-99'
     langcode: en
     uuid: 963c1388-d4ff-44de-8088-17c37176cfaf
+blocks:
+  -
+    info: 'Test sync block'
+    langcode: en
+    uuid: f8b4a8e0-34e5-4fcc-98d9-9d6f3ac939d0
+    bundle: basic
+    revision_id: null
+    rev_id_current: null
+    fields:
+      body:
+        value: "<p>Did this make it to dev?</p>\r\n"
+        summary: ''
+        format: basic_html
