--- a/composer.json
+++ b/composer.json
@@ -49,12 +49,13 @@
     "drupal/components": "^1.0",
     "drupal/config_devel": "^1.2",
     "drupal/config_direct_save": "^1.0",
+    "drupal/config_filter": "^1.4.0",
     "drupal/config_ignore": "^2.1",
     "drupal/config_split": "^1.3",
     "drupal/config_update": "^1.5",
     "drupal/console": "~1",
     "drupal/contact_storage": "^1.0@beta",
-    "drupal/core": "^8.6.2",
+    "drupal/core": "^8.6.3",
     "drupal/crop": "^2.0",
     "drupal/ctools": "^3.0@alpha",
     "drupal/default_content": "^1.0.0@alpha",
