--- a/composer.json
+++ b/composer.json
@@ -51,18 +51,21 @@
     "drupal/config_direct_save": "^1.0",
     "drupal/config_filter": "^1.4.0",
     "drupal/config_ignore": "^2.1",
-    "drupal/config_split": "^1.3",
+    "drupal/config_split": "^1.4",
     "drupal/config_update": "^1.5",
-    "drupal/console": "~1",
+    "drupal/console": "^1.8.0",
+    "drupal/console-core": "^1.8.0",
     "drupal/contact_storage": "^1.0@beta",
     "drupal/core": "^8.6.3",
     "drupal/crop": "^2.0",
     "drupal/ctools": "^3.0@alpha",
     "drupal/default_content": "^1.0.0@alpha",
-    "drupal/devel": "1.x-dev",
+    "drupal/devel": "1.2",
     "drupal/easy_breadcrumb": "^1.6",
-    "drupal/entity_browser": "^2.0",
+    "drupal/entity": "^1.0.0-rc1",
+    "drupal/entity_browser": "^2.0.0",
     "drupal/entity_embed": "^1.0@beta",
+    "drupal/entity_reference_revisions": "1.6.0",
     "drupal/entity_usage": "^2.0@alpha",
     "drupal/eu_cookie_compliance": "^1.0",
     "drupal/extlink": "^1.1",
@@ -70,12 +73,12 @@
     "drupal/flippy": "1.x-dev",
     "drupal/focal_point": "~1",
     "drupal/geolocation": "^1.11",
-    "drupal/honeypot": "^1.24",
-    "drupal/hreflang": "^1.0",
+    "drupal/honeypot": "^1.29",
+    "drupal/hreflang": "^1.1",
     "drupal/image_style_quality": "^1.3",
     "drupal/inline_entity_form": "^1.0@beta",
     "drupal/libraries": "3.x-dev",
-    "drupal/link_attributes": "^1.0",
+    "drupal/link_attributes": "^1.5",
     "drupal/linkit": "^4.3",
     "drupal/media_entity": "^2.0",
     "drupal/media_entity_actions": "^1.0@alpha",
@@ -84,27 +87,27 @@
     "drupal/media_entity_image": "^1.2",
     "drupal/menu_block": "^1.4",
     "drupal/metatag": "^1.0",
-    "drupal/paragraphs": "^1.1",
-    "drupal/pathauto": "~1",
+    "drupal/paragraphs": "^1.5",
+    "drupal/pathauto": "^1.3",
     "drupal/pathologic": "1.x-dev",
-    "drupal/redirect": "~1",
-    "drupal/search_api": "~1",
+    "drupal/redirect": "^1.3",
+    "drupal/search_api": "^1.10",
     "drupal/stage_file_proxy": "^1.0@alpha",
-    "drupal/structure_sync": "^1.13",
+    "drupal/structure_sync": "^1.14",
     "drupal/superfish": "~1",
-    "drupal/token": "^1.0@RC",
+    "drupal/token": "^1.5",
     "drupal/twig_tweak": "^2.0",
     "drupal/video_embed_field": "^2.0",
     "drupal/video_embed_media": "^2.0",
     "drupal/views_infinite_scroll": "^1.5",
-    "drupal/webform": "~5",
+    "drupal/webform": "^5.0",
     "drupal/xmlsitemap": "^1.0@alpha",
     "drush/drush": "~8",
     "electriccitizen/docksal": "~1",
     "geerlingguy/drupal-vm": "^4.7",
     "rvtraveller/qs-composer-installer": "^1.1",
     "webflo/drupal-core-strict": "^8",
-    "webflo/drupal-finder": "^0.3.0",
+    "webflo/drupal-finder": "^1.0",
     "wikimedia/composer-merge-plugin": "~1.3"
   },
   "require-dev": {
