--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@
 /web/themes/contrib/
 /web/profiles/contrib/
 /web/private/scripts/quicksilver
+/web/libraries/
 
 # ignore lando
 .ht.router.php 
