Update search api and landing page display

--- a/config/sync/core.entity_view_display.node.landing_page.default.yml
+++ b/config/sync/core.entity_view_display.node.landing_page.default.yml
@@ -7,6 +7,7 @@ dependencies:
     - field.field.node.landing_page.field_banner
     - field.field.node.landing_page.field_metatags
     - field.field.node.landing_page.field_oc_widgets
+    - field.field.node.landing_page.layout_builder__layout
     - node.type.landing_page
   module:
     - entity_reference_revisions
@@ -34,26 +35,6 @@ third_party_settings:
               context_mapping: {  }
             additional: {  }
             weight: 0
-          4b8a4f5c-231e-469d-adb6-8a0ed139b67e:
-            uuid: 4b8a4f5c-231e-469d-adb6-8a0ed139b67e
-            region: content
-            configuration:
-              label_display: '0'
-              context_mapping:
-                entity: layout_builder.entity
-              id: 'extra_field_block:node:landing_page:links'
-            additional: {  }
-            weight: 1
-          7889cde4-58b5-4b0c-80f1-d0fb4ba993e5:
-            uuid: 7889cde4-58b5-4b0c-80f1-d0fb4ba993e5
-            region: content
-            configuration:
-              label_display: '0'
-              context_mapping:
-                entity: layout_builder.entity
-              id: 'extra_field_block:node:landing_page:links'
-            additional: {  }
-            weight: 2
       -
         layout_id: layout_onecol
         layout_settings: {  }
