Update template and reconfig site search to run with custom module block

--- a/config/sync/views.view.site_search.yml
+++ b/config/sync/views.view.site_search.yml
@@ -230,7 +230,7 @@ display:
             description: ''
             use_operator: false
             operator: search_api_fulltext_op
-            identifier: search_api_fulltext
+            identifier: site_search_api_fulltext
             required: false
             remember: false
             multiple: false
@@ -319,7 +319,7 @@ display:
       display_extenders: {  }
       path: site-search
       display_description: ''
-      exposed_block: true
+      exposed_block: false
     cache_metadata:
       max-age: -1
       contexts:
