--- a/config/sync/webform.webform.contact.yml
+++ b/config/sync/webform.webform.contact.yml
@@ -5,6 +5,11 @@ dependencies:
   enforced:
     module:
       - webform
+  module:
+    - antibot
+third_party_settings:
+  antibot:
+    antibot: true
 _core:
   default_config_hash: oZIx_IHS7gdveuJ3iSbhNY-A1FwlieWPdjJEJz4Wlb4
 open: null
