--- a/config/sync/core.entity_view_display.node.page.default.yml
+++ b/config/sync/core.entity_view_display.node.page.default.yml
@@ -141,6 +141,10 @@ third_party_settings:
                 entity: layout_builder.entity
             additional: {  }
             weight: 0
+      -
+        layout_id: two_column_sidebar_left
+        layout_settings: {  }
+        components: {  }
     allow_custom: false
     is_enabled: true
     enabled: true
