Fix layout builder for landing pages by removing paragraphs

--- a/config/sync/core.entity_view_display.media.document.banner.yml
+++ b/config/sync/core.entity_view_display.media.document.banner.yml
@@ -51,6 +51,7 @@ content:
     region: content
 hidden:
   created: true
+  field_media_categories: true
   name: true
   thumbnail: true
   uid: true
