--- a/config/sync/core.entity_form_display.node.landing_page.default.yml
+++ b/config/sync/core.entity_form_display.node.landing_page.default.yml
@@ -7,13 +7,11 @@ dependencies:
     - field.field.node.landing_page.body
     - field.field.node.landing_page.field_banner
     - field.field.node.landing_page.field_metatags
-    - field.field.node.landing_page.field_oc_widgets
     - node.type.landing_page
   module:
     - entity_browser_entity_form
     - inline_entity_form
     - metatag
-    - paragraphs
     - path
     - text
 _core:
@@ -56,23 +54,6 @@ content:
     third_party_settings: {  }
     type: metatag_firehose
     region: content
-  field_oc_widgets:
-    weight: 3
-    settings:
-      title: Paragraph
-      title_plural: Paragraphs
-      edit_mode: closed
-      closed_mode: preview
-      autocollapse: all
-      add_mode: button
-      form_display_mode: default
-      default_paragraph_type: _none
-      features:
-        duplicate: duplicate
-        collapse_edit_all: collapse_edit_all
-    third_party_settings: {  }
-    type: paragraphs
-    region: content
   path:
     type: path
     weight: 6
@@ -96,6 +77,7 @@ content:
     third_party_settings: {  }
 hidden:
   created: true
+  layout_builder__layout: true
   promote: true
   sticky: true
   uid: true
