--- a/config/sync/core.entity_view_display.paragraph.view_placer.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.view_placer.default.yml
@@ -3,7 +3,6 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.field.paragraph.view_placer.field_admin_description
     - field.field.paragraph.view_placer.field_display_machine_name
     - field.field.paragraph.view_placer.field_view_machine_name
     - field.field.paragraph.view_placer.field_widget_title
@@ -13,36 +12,28 @@ targetEntityType: paragraph
 bundle: view_placer
 mode: default
 content:
-  field_admin_description:
-    weight: 1
-    label: above
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-    type: string
-    region: content
   field_display_machine_name:
-    weight: 3
-    label: above
+    type: string
+    weight: 2
+    region: content
+    label: hidden
     settings:
       link_to_entity: false
     third_party_settings: {  }
-    type: string
-    region: content
   field_view_machine_name:
-    weight: 2
-    label: above
+    weight: 1
+    label: hidden
     settings:
       link_to_entity: false
     third_party_settings: {  }
     type: string
     region: content
   field_widget_title:
+    type: string
     weight: 0
-    label: above
+    region: content
+    label: hidden
     settings:
       link_to_entity: false
     third_party_settings: {  }
-    type: string
-    region: content
 hidden: {  }
