--- a/composer.json
+++ b/composer.json
@@ -223,6 +223,9 @@
         "Enable menu block by page functionality": "https://www.drupal.org/files/issues/2018-08-08/menu_block-follow-2756675-55.patch",
         "Enable using active menus as menu block titles": "https://www.drupal.org/files/issues/menu_block-label_configuration-2809699-51.patch",
         "Enable link functionality on menu block titles": "https://www.drupal.org/files/issues/menu_block-title_as_link-1-d8.patch"
+      },
+      "drupal/paragraphs":{
+        "Invaled call to member function ID": "https://www.drupal.org/files/issues/2018-04-27/2948778-call-to-a-member-function-id-in-null.patch"
       }
     },
     "enable-patching": true
